app/typescript
Script started on Sat May 16 07:58:15 2015
ls
^C[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app]1;..t-with-d3/app[0m[27m[24m[J[01;32m➜ [01;32m [36mapp [01;34m[01;34m [00m[K[56C(💎 -system)(🔧 -v0.12.2) [80D[?1h=s ccd scripts[1m/[0m[0m [?1l>
]2;cd scripts]1;cd[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app/scripts]1;..3/app/scripts[0m[27m[24m[J[01;32m➜ [01;32m [36mscripts [01;34m[01;34m [00m[K[52C(💎 -system)(🔧 -v0.12.2) [76D[?1h=lls[?1l>
]2;ls -G]1;lsapp.coffee [1m[36mcomponents[39;49m[0m
[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app/scripts]1;..3/app/scripts[0m[27m[24m[J[01;32m➜ [01;32m [36mscripts [01;34m[01;34m [00m[K[52C(💎 -system)(🔧 -v0.12.2) [76D[?1h=ccd components[1m/[0m[0m/m [?1l>
]2;cd components/]1;cd[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app/scripts/components]1;..ts/components[0m[27m[24m[J[01;32m➜ [01;32m [36mcomponents [01;34m[01;34m [00m[K[49C(💎 -system)(🔧 -v0.12.2) [73D[?1h=ccoffee -c multiLineChart.coffee[1m [0m[0m [?1l>
]2;coffee -c multiLineChart.coffee]1;coffee/Users/chitacan/git/react-with-d3/app/scripts/components/multiLineChart.coffee:115:11: error: missing / (unclosed regex)
    <div><[1;31m/[0mdiv>
[1;31m          ^[0m
[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app/scripts/components]1;..ts/components[0m[27m[24m[J[01;31m➜ [27m[01;32m [36mcomponents [01;34m[01;34m [00m[K[49C(💎 -system)(🔧 -v0.12.2) [73D[?1h=jjsx[?1l>
]2;jsx]1;jsxzsh: command not found: jsx
[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app/scripts/components]1;..ts/components[0m[27m[24m[J[01;31m➜ [27m[01;32m [36mcomponents [01;34m[01;34m [00m[K[49C(💎 -system)(🔧 -v0.12.2) [73D[?1h=jsx[?1l>
]2;jsx]1;jsxzsh: command not found: jsx
[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app/scripts/components]1;..ts/components[0m[27m[24m[J[01;31m➜ [27m[01;32m [36mcomponents [01;34m[01;34m [00m[K[49C(💎 -system)(🔧 -v0.12.2) [73D[?1h=jsxcoffee -c multiLineChart.coffee[?1l>
]2;coffee -c multiLineChart.coffee]1;coffee/Users/chitacan/git/react-with-d3/app/scripts/components/multiLineChart.coffee:4:1: error: unexpected indentation
[1;31m  [0mCOLORS = ['#eaa54b', '#66a1e2', '#8065e4', '#48cc81']
[1;31m^^[0m
[1m[7m%[27m[1m[0m                                                                                         ]2;chitacan@chitacan-MBP: ~/git/react-with-d3/app/scripts/components]1;..ts/components[0m[27m[24m[J[01;31m➜ [27m[01;32m [36mcomponents [01;34m[01;34m [00m[K[49C(💎 -system)(🔧 -v0.12.2) [73D[?1h=